welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: method verifFin has return statement; needs result type
					return true;
                                        ^SnakeBuggle:10: error: method verifFin has return statement; needs result type
					return false;
                                        ^SnakeBuggle:15: error: method verifFin has return statement; needs result type
					return true;
                                        ^SnakeBuggle:17: error: method verifFin has return statement; needs result type
					return false;
                                        ^SnakeBuggle:21: error: method verifFin has return statement; needs result type
			return false;
                        ^